--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,13 @@ server.port=6680
 spring.main.banner-mode=log
 spring.banner.location=classpath:banner.txt
 
-api.security.secret=6nUsn5Y02Qn2bQ1XlkJKjbQCGv5Dh6IZgdoTbR0J8J0
-
+api.security.secret=${APP_SECRET}
 spring.datasource.url=jdbc:mysql://localhost:3306/ltadcrm
 
-spring.datasource.username=root
-spring.datasource.password=root
+
+
+spring.datasource.username=${DB_username}
+spring.datasource.password=${DB_password}
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
