--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=ltadcrm
 
-
-
 server.port=6680
 spring.main.banner-mode=log
 spring.banner.location=classpath:banner.txt
@@ -13,8 +11,23 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ltadcrm
 spring.datasource.username=${DB_username}
 spring.datasource.password=${DB_password}
 
-
+# configuração de SQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# Configuração de threads timeout
+spring.datasource.hikari.connection-timeout=30000
+# Ativa o log de todas as consultas SQL executadas
+spring.jpa.show-sql=true
+
+# Formata as consultas SQL para facilitar a leitura
+spring.jpa.properties.hibernate.format_sql=true
+# Log de todas as operações Hibernate, incluindo detalhes sobre bloqueios
+logging.level.org.hibernate.SQL=DEBUG
+
+# Log de informações detalhadas sobre o Hibernate
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+# Log de transações, que pode ser útil para ver o bloqueio nas transações
+logging.level.org.springframework.transaction=DEBUG
