--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,15 +19,20 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Configuração de threads timeout
 spring.datasource.hikari.connection-timeout=30000
 # Ativa o log de todas as consultas SQL executadas
-spring.jpa.show-sql=true
+
 
 # Formata as consultas SQL para facilitar a leitura
 spring.jpa.properties.hibernate.format_sql=true
 # Log de todas as operações Hibernate, incluindo detalhes sobre bloqueios
-logging.level.org.hibernate.SQL=DEBUG
+
 
 # Log de informações detalhadas sobre o Hibernate
-logging.level.org.hibernate.type.descriptor.sql=trace
+
 
 # Log de transações, que pode ser útil para ver o bloqueio nas transações
 logging.level.org.springframework.transaction=DEBUG
+
+# habilita websocket 
+spring.web.websocket.enabled=true
+logging.level.org.springframework.messaging=DEBUG
+logging.level.org.springframework.web.socket=DEBUG
