salvando muanças estruturais e implementando renderização de site interno via resource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,10 @@ logging.level.org.springframework.transaction=DEBUG
 spring.web.websocket.enabled=true
 logging.level.org.springframework.messaging=DEBUG
 logging.level.org.springframework.web.socket=DEBUG
+
+# Visualização externa
+server.address=0.0.0.0
+#Mime liberation
+spring.web.resources.chain.strategy.content.enabled=true
+spring.web.resources.chain.strategy.content.paths=/**
+
