--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,6 +8,10 @@
     "name": "api.security.secret",
     "type": "java.lang.String",
     "description": "A description for 'api.security.secret'"
+  },
+  {
+    "name": "spring.web.websocket.enabled",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.web.websocket.enabled'"
   }
- 
 ]}
