--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,7 @@ logging.level.org.springframework.transaction=DEBUG
 spring.web.websocket.enabled=true
 logging.level.org.springframework.messaging=DEBUG
 logging.level.org.springframework.web.socket=DEBUG
+# multipart conf
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
