--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,5 @@ logging.level.org.springframework.web.socket=DEBUG
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
+#static config
+spring.web.resources.static-locations=classpath:/static/
